# scriptor

./: .gitignore  CMakeLists.txt  README.md  bootstrap.py  client.py  conan.cmake  conanfile.txt  tsan_ignore.txt
.github/workflows/: gcl-tests.yml  scriptor-tests.yml
clients/: client.py  client_tcp_socket.py  client_unix_socket.py
cmake/: Debug.cmake  Release.cmake
src/: acceptor.cpp  acceptor.h  aio.h  element.cpp  element.h  logger.cpp  logger.h  main.cpp  scriptor.cpp  scriptor.h  server.cpp  server.h  session.cpp  session.h  socket.cpp  socket.h  utils.cpp  utils.h
systemd/: scriptor.service
test/: helper.cpp  helper.h  main.cpp  test.cpp  test_element.cpp  test_logger.cpp  test_processor.cpp  test_scriptor.cpp
